apps/be/users-be/k8s/db/postgres-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-be-postgres-external
  namespace: skillsier
  labels:
    app: users-be-postgres
spec:
  type: NodePort
  selector:
    app: users-be-postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
      nodePort: 30432
