apps/be/users-be/k8s/db/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-be-postgres
  namespace: skillsier
  labels:
    app: users-be-postgres
spec:
  type: ClusterIP
  selector:
    app: users-be-postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
